@@ -130,14 +130,14 @@
                 <div *ngIf="store?.deliveries?.length; else noDeliveryTemplate">
                     <table class="font-9 text-muted w-100">
                         <tr *ngFor="let delivery of store?.deliveries | orderBy: 'fee'" class="border-bottom">
-                            <td class="align-top">
+                            <td class="align-top col">
                                 <ul class="mb-0 py-2 pl-4">
                                     <li class="text-break" *ngFor="let name of delivery?.name">
                                         {{ name }}
                                     </li>
                                 </ul>
                             </td>
-                            <td class="align-top py-2 text-center" width="200">
+                            <td class="align-top py-2 text-right col-auto text-nowrap">
                                 RM {{ delivery?.fee | number: '1.2-2' }}
                             </td>
                         </tr>
